--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
  
   </div>
 
-    <script defer src="js/bootstrap.min.js"></script>
+    <script defer src="bootstrap.min.js"></script>
     <script defer src="index.js"></script>
 </body>
 </html>
